# Desafio_Programacao_Capgemini02

./: .flake8  README.md  pyproject.toml
.github/workflows/: python-app.yml
source/questions/: question01.py  question02.py  question03.py
source/tests/: test_question01.py  test_question02.py  test_question03.py
