[tool.poetry]
name = "desafio3"
version = "0.1.0"
description = "Desafio de Programaçao 3 - Academia Capgemini"
authors = ["Rodrigo Usuy <rousuy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pytest = "^7.0.1"
six = "^1.16.0"
codecov = "^2.1.12"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
